# ArgusFace

./: .cursorignore  .gitignore  pyproject.toml
osnet/: extractor.py
pipeline/: cross_camera_matching.py  cross_camera_matching_optimized.py  extract_reid_embedding.py  extract_tracklet.py  global_id_manager.py  run_global_id_assignment.py  segment_tracklets.py  test.py  track_meta_manager.py
scrfd/: README_ONNX.md  README_SCRFD_STANDALONE.md  scrfd.py  scrfd2onnx.py  scrfd_standalone.py  test_scrfd_debug.py
solider/: embedding_extractor.py
